tests/negative/neg_pr113_constraint_out_of_range.safe
package neg_pr113_constraint_out_of_range
   subtype small is integer (0 to 3);
   type packet (count : small = 0) is
      record
         value : integer;

   p : packet (count = 9) = (value = 1);
